ASS3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSEDIV
    CLOSESPAN
    CLOSESTYLE
    CLOSETABLE
    GARBAGE
    OPENDIV
    OPENSPAN
    OPENSTYLE
    OPENTABLE
    STOP

Grammar

Rule 0     S' -> start
Rule 1     start -> table
Rule 2     table -> BEGINTABLE skiptag handlerow handlerow handlerow handlerow handlerow handlerow handlerow
Rule 3     table -> <empty>
Rule 4     skiptag -> CLOSEROW skiptag
Rule 5     skiptag -> empty
Rule 6     handlerow -> OPENROW handleheader dataCell CLOSEROW handlerow
Rule 7     handlerow -> OPENROW handleheader CLOSEROW
Rule 8     handlerow -> <empty>
Rule 9     dataCell -> OPENDATA content CLOSEDATA dataCell
Rule 10    dataCell -> OPENDATA content handlehref content CLOSEDATA dataCell
Rule 11    dataCell -> OPENDATA handlehref content CLOSEDATA dataCell
Rule 12    dataCell -> <empty>
Rule 13    handlehref -> OPENHREF content CLOSEHREF handlehref
Rule 14    handlehref -> <empty>
Rule 15    handleheader -> OPENHEADER CONTENT CLOSEHEADER handleheader
Rule 16    handleheader -> OPENHEADER CONTENT CONTENT CONTENT CLOSEHEADER handleheader
Rule 17    handleheader -> OPENHEADER content handlehref CLOSEHEADER handleheader
Rule 18    handleheader -> empty
Rule 19    empty -> <empty>
Rule 20    content -> CONTENT content
Rule 21    content -> empty
Rule 22    Content -> CONTENT Content
Rule 23    Content -> empty

Terminals, with rules where they appear

BEGINTABLE           : 2
CLOSEDATA            : 9 10 11
CLOSEDIV             : 
CLOSEHEADER          : 15 16 17
CLOSEHREF            : 13
CLOSEROW             : 4 6 7
CLOSESPAN            : 
CLOSESTYLE           : 
CLOSETABLE           : 
CONTENT              : 15 16 16 16 20 22
GARBAGE              : 
OPENDATA             : 9 10 11
OPENDIV              : 
OPENHEADER           : 15 16 17
OPENHREF             : 13
OPENROW              : 6 7
OPENSPAN             : 
OPENSTYLE            : 
OPENTABLE            : 
STOP                 : 
error                : 

Nonterminals, with rules where they appear

Content              : 22
content              : 9 10 10 11 13 17 20
dataCell             : 6 9 10 11
empty                : 5 18 21 23
handleheader         : 6 7 15 16 17
handlehref           : 10 11 13 17
handlerow            : 2 2 2 2 2 2 2 6
skiptag              : 2 4
start                : 0
table                : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . table
    (2) table -> . BEGINTABLE skiptag handlerow handlerow handlerow handlerow handlerow handlerow handlerow
    (3) table -> .

    BEGINTABLE      shift and go to state 3
    $end            reduce using rule 3 (table -> .)

    start                          shift and go to state 1
    table                          shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> table .

    $end            reduce using rule 1 (start -> table .)


state 3

    (2) table -> BEGINTABLE . skiptag handlerow handlerow handlerow handlerow handlerow handlerow handlerow
    (4) skiptag -> . CLOSEROW skiptag
    (5) skiptag -> . empty
    (19) empty -> .

    CLOSEROW        shift and go to state 5
    OPENROW         reduce using rule 19 (empty -> .)
    $end            reduce using rule 19 (empty -> .)

    skiptag                        shift and go to state 4
    empty                          shift and go to state 6

state 4

    (2) table -> BEGINTABLE skiptag . handlerow handlerow handlerow handlerow handlerow handlerow handlerow
    (6) handlerow -> . OPENROW handleheader dataCell CLOSEROW handlerow
    (7) handlerow -> . OPENROW handleheader CLOSEROW
    (8) handlerow -> .

  ! shift/reduce conflict for OPENROW resolved as shift
    OPENROW         shift and go to state 8
    $end            reduce using rule 8 (handlerow -> .)

  ! OPENROW         [ reduce using rule 8 (handlerow -> .) ]

    handlerow                      shift and go to state 7

state 5

    (4) skiptag -> CLOSEROW . skiptag
    (4) skiptag -> . CLOSEROW skiptag
    (5) skiptag -> . empty
    (19) empty -> .

    CLOSEROW        shift and go to state 5
    OPENROW         reduce using rule 19 (empty -> .)
    $end            reduce using rule 19 (empty -> .)

    skiptag                        shift and go to state 9
    empty                          shift and go to state 6

state 6

    (5) skiptag -> empty .

    OPENROW         reduce using rule 5 (skiptag -> empty .)
    $end            reduce using rule 5 (skiptag -> empty .)


state 7

    (2) table -> BEGINTABLE skiptag handlerow . handlerow handlerow handlerow handlerow handlerow handlerow
    (6) handlerow -> . OPENROW handleheader dataCell CLOSEROW handlerow
    (7) handlerow -> . OPENROW handleheader CLOSEROW
    (8) handlerow -> .

  ! shift/reduce conflict for OPENROW resolved as shift
    OPENROW         shift and go to state 8
    $end            reduce using rule 8 (handlerow -> .)

  ! OPENROW         [ reduce using rule 8 (handlerow -> .) ]

    handlerow                      shift and go to state 10

state 8

    (6) handlerow -> OPENROW . handleheader dataCell CLOSEROW handlerow
    (7) handlerow -> OPENROW . handleheader CLOSEROW
    (15) handleheader -> . OPENHEADER CONTENT CLOSEHEADER handleheader
    (16) handleheader -> . OPENHEADER CONTENT CONTENT CONTENT CLOSEHEADER handleheader
    (17) handleheader -> . OPENHEADER content handlehref CLOSEHEADER handleheader
    (18) handleheader -> . empty
    (19) empty -> .

    OPENHEADER      shift and go to state 12
    CLOSEROW        reduce using rule 19 (empty -> .)
    OPENDATA        reduce using rule 19 (empty -> .)

    handleheader                   shift and go to state 11
    empty                          shift and go to state 13

state 9

    (4) skiptag -> CLOSEROW skiptag .

    OPENROW         reduce using rule 4 (skiptag -> CLOSEROW skiptag .)
    $end            reduce using rule 4 (skiptag -> CLOSEROW skiptag .)


state 10

    (2) table -> BEGINTABLE skiptag handlerow handlerow . handlerow handlerow handlerow handlerow handlerow
    (6) handlerow -> . OPENROW handleheader dataCell CLOSEROW handlerow
    (7) handlerow -> . OPENROW handleheader CLOSEROW
    (8) handlerow -> .

  ! shift/reduce conflict for OPENROW resolved as shift
    OPENROW         shift and go to state 8
    $end            reduce using rule 8 (handlerow -> .)

  ! OPENROW         [ reduce using rule 8 (handlerow -> .) ]

    handlerow                      shift and go to state 14

state 11

    (6) handlerow -> OPENROW handleheader . dataCell CLOSEROW handlerow
    (7) handlerow -> OPENROW handleheader . CLOSEROW
    (9) dataCell -> . OPENDATA content CLOSEDATA dataCell
    (10) dataCell -> . OPENDATA content handlehref content CLOSEDATA dataCell
    (11) dataCell -> . OPENDATA handlehref content CLOSEDATA dataCell
    (12) dataCell -> .

  ! shift/reduce conflict for CLOSEROW resolved as shift
    CLOSEROW        shift and go to state 16
    OPENDATA        shift and go to state 17

  ! CLOSEROW        [ reduce using rule 12 (dataCell -> .) ]

    dataCell                       shift and go to state 15

state 12

    (15) handleheader -> OPENHEADER . CONTENT CLOSEHEADER handleheader
    (16) handleheader -> OPENHEADER . CONTENT CONTENT CONTENT CLOSEHEADER handleheader
    (17) handleheader -> OPENHEADER . content handlehref CLOSEHEADER handleheader
    (20) content -> . CONTENT content
    (21) content -> . empty
    (19) empty -> .

    CONTENT         shift and go to state 18
    OPENHREF        reduce using rule 19 (empty -> .)
    CLOSEHEADER     reduce using rule 19 (empty -> .)

    content                        shift and go to state 19
    empty                          shift and go to state 20

state 13

    (18) handleheader -> empty .

    CLOSEROW        reduce using rule 18 (handleheader -> empty .)
    OPENDATA        reduce using rule 18 (handleheader -> empty .)


state 14

    (2) table -> BEGINTABLE skiptag handlerow handlerow handlerow . handlerow handlerow handlerow handlerow
    (6) handlerow -> . OPENROW handleheader dataCell CLOSEROW handlerow
    (7) handlerow -> . OPENROW handleheader CLOSEROW
    (8) handlerow -> .

  ! shift/reduce conflict for OPENROW resolved as shift
    OPENROW         shift and go to state 8
    $end            reduce using rule 8 (handlerow -> .)

  ! OPENROW         [ reduce using rule 8 (handlerow -> .) ]

    handlerow                      shift and go to state 21

state 15

    (6) handlerow -> OPENROW handleheader dataCell . CLOSEROW handlerow

    CLOSEROW        shift and go to state 22


state 16

    (7) handlerow -> OPENROW handleheader CLOSEROW .

    OPENROW         reduce using rule 7 (handlerow -> OPENROW handleheader CLOSEROW .)
    $end            reduce using rule 7 (handlerow -> OPENROW handleheader CLOSEROW .)


state 17

    (9) dataCell -> OPENDATA . content CLOSEDATA dataCell
    (10) dataCell -> OPENDATA . content handlehref content CLOSEDATA dataCell
    (11) dataCell -> OPENDATA . handlehref content CLOSEDATA dataCell
    (20) content -> . CONTENT content
    (21) content -> . empty
    (13) handlehref -> . OPENHREF content CLOSEHREF handlehref
    (14) handlehref -> .
    (19) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! reduce/reduce conflict for CLOSEDATA resolved using rule 14 (handlehref -> .)
  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CONTENT resolved as shift
    CONTENT         shift and go to state 25
    OPENHREF        shift and go to state 26
    CLOSEDATA       reduce using rule 14 (handlehref -> .)

  ! CONTENT         [ reduce using rule 14 (handlehref -> .) ]
  ! CLOSEDATA       [ reduce using rule 19 (empty -> .) ]
  ! OPENHREF        [ reduce using rule 19 (empty -> .) ]
  ! CONTENT         [ reduce using rule 19 (empty -> .) ]

    content                        shift and go to state 23
    handlehref                     shift and go to state 24
    empty                          shift and go to state 20

state 18

    (15) handleheader -> OPENHEADER CONTENT . CLOSEHEADER handleheader
    (16) handleheader -> OPENHEADER CONTENT . CONTENT CONTENT CLOSEHEADER handleheader
    (20) content -> CONTENT . content
    (20) content -> . CONTENT content
    (21) content -> . empty
    (19) empty -> .

  ! shift/reduce conflict for CLOSEHEADER resolved as shift
    CLOSEHEADER     shift and go to state 28
    CONTENT         shift and go to state 27
    OPENHREF        reduce using rule 19 (empty -> .)

  ! CLOSEHEADER     [ reduce using rule 19 (empty -> .) ]

    content                        shift and go to state 29
    empty                          shift and go to state 20

state 19

    (17) handleheader -> OPENHEADER content . handlehref CLOSEHEADER handleheader
    (13) handlehref -> . OPENHREF content CLOSEHREF handlehref
    (14) handlehref -> .

    OPENHREF        shift and go to state 26
    CLOSEHEADER     reduce using rule 14 (handlehref -> .)

    handlehref                     shift and go to state 30

state 20

    (21) content -> empty .

    OPENHREF        reduce using rule 21 (content -> empty .)
    CLOSEHEADER     reduce using rule 21 (content -> empty .)
    CLOSEDATA       reduce using rule 21 (content -> empty .)
    CONTENT         reduce using rule 21 (content -> empty .)
    CLOSEHREF       reduce using rule 21 (content -> empty .)


state 21

    (2) table -> BEGINTABLE skiptag handlerow handlerow handlerow handlerow . handlerow handlerow handlerow
    (6) handlerow -> . OPENROW handleheader dataCell CLOSEROW handlerow
    (7) handlerow -> . OPENROW handleheader CLOSEROW
    (8) handlerow -> .

  ! shift/reduce conflict for OPENROW resolved as shift
    OPENROW         shift and go to state 8
    $end            reduce using rule 8 (handlerow -> .)

  ! OPENROW         [ reduce using rule 8 (handlerow -> .) ]

    handlerow                      shift and go to state 31

state 22

    (6) handlerow -> OPENROW handleheader dataCell CLOSEROW . handlerow
    (6) handlerow -> . OPENROW handleheader dataCell CLOSEROW handlerow
    (7) handlerow -> . OPENROW handleheader CLOSEROW
    (8) handlerow -> .

  ! shift/reduce conflict for OPENROW resolved as shift
    OPENROW         shift and go to state 8
    $end            reduce using rule 8 (handlerow -> .)

  ! OPENROW         [ reduce using rule 8 (handlerow -> .) ]

    handlerow                      shift and go to state 32

state 23

    (9) dataCell -> OPENDATA content . CLOSEDATA dataCell
    (10) dataCell -> OPENDATA content . handlehref content CLOSEDATA dataCell
    (13) handlehref -> . OPENHREF content CLOSEHREF handlehref
    (14) handlehref -> .

  ! shift/reduce conflict for CLOSEDATA resolved as shift
    CLOSEDATA       shift and go to state 33
    OPENHREF        shift and go to state 26
    CONTENT         reduce using rule 14 (handlehref -> .)

  ! CLOSEDATA       [ reduce using rule 14 (handlehref -> .) ]

    handlehref                     shift and go to state 34

state 24

    (11) dataCell -> OPENDATA handlehref . content CLOSEDATA dataCell
    (20) content -> . CONTENT content
    (21) content -> . empty
    (19) empty -> .

    CONTENT         shift and go to state 25
    CLOSEDATA       reduce using rule 19 (empty -> .)

    content                        shift and go to state 35
    empty                          shift and go to state 20

state 25

    (20) content -> CONTENT . content
    (20) content -> . CONTENT content
    (21) content -> . empty
    (19) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
    CONTENT         shift and go to state 25
    CLOSEDATA       reduce using rule 19 (empty -> .)
    OPENHREF        reduce using rule 19 (empty -> .)
    CLOSEHREF       reduce using rule 19 (empty -> .)
    CLOSEHEADER     reduce using rule 19 (empty -> .)

  ! CONTENT         [ reduce using rule 19 (empty -> .) ]

    content                        shift and go to state 29
    empty                          shift and go to state 20

state 26

    (13) handlehref -> OPENHREF . content CLOSEHREF handlehref
    (20) content -> . CONTENT content
    (21) content -> . empty
    (19) empty -> .

    CONTENT         shift and go to state 25
    CLOSEHREF       reduce using rule 19 (empty -> .)

    content                        shift and go to state 36
    empty                          shift and go to state 20

state 27

    (16) handleheader -> OPENHEADER CONTENT CONTENT . CONTENT CLOSEHEADER handleheader
    (20) content -> CONTENT . content
    (20) content -> . CONTENT content
    (21) content -> . empty
    (19) empty -> .

    CONTENT         shift and go to state 37
    OPENHREF        reduce using rule 19 (empty -> .)
    CLOSEHEADER     reduce using rule 19 (empty -> .)

    content                        shift and go to state 29
    empty                          shift and go to state 20

state 28

    (15) handleheader -> OPENHEADER CONTENT CLOSEHEADER . handleheader
    (15) handleheader -> . OPENHEADER CONTENT CLOSEHEADER handleheader
    (16) handleheader -> . OPENHEADER CONTENT CONTENT CONTENT CLOSEHEADER handleheader
    (17) handleheader -> . OPENHEADER content handlehref CLOSEHEADER handleheader
    (18) handleheader -> . empty
    (19) empty -> .

    OPENHEADER      shift and go to state 12
    CLOSEROW        reduce using rule 19 (empty -> .)
    OPENDATA        reduce using rule 19 (empty -> .)

    handleheader                   shift and go to state 38
    empty                          shift and go to state 13

state 29

    (20) content -> CONTENT content .

    OPENHREF        reduce using rule 20 (content -> CONTENT content .)
    CLOSEHEADER     reduce using rule 20 (content -> CONTENT content .)
    CLOSEDATA       reduce using rule 20 (content -> CONTENT content .)
    CONTENT         reduce using rule 20 (content -> CONTENT content .)
    CLOSEHREF       reduce using rule 20 (content -> CONTENT content .)


state 30

    (17) handleheader -> OPENHEADER content handlehref . CLOSEHEADER handleheader

    CLOSEHEADER     shift and go to state 39


state 31

    (2) table -> BEGINTABLE skiptag handlerow handlerow handlerow handlerow handlerow . handlerow handlerow
    (6) handlerow -> . OPENROW handleheader dataCell CLOSEROW handlerow
    (7) handlerow -> . OPENROW handleheader CLOSEROW
    (8) handlerow -> .

  ! shift/reduce conflict for OPENROW resolved as shift
    OPENROW         shift and go to state 8
    $end            reduce using rule 8 (handlerow -> .)

  ! OPENROW         [ reduce using rule 8 (handlerow -> .) ]

    handlerow                      shift and go to state 40

state 32

    (6) handlerow -> OPENROW handleheader dataCell CLOSEROW handlerow .

    OPENROW         reduce using rule 6 (handlerow -> OPENROW handleheader dataCell CLOSEROW handlerow .)
    $end            reduce using rule 6 (handlerow -> OPENROW handleheader dataCell CLOSEROW handlerow .)


state 33

    (9) dataCell -> OPENDATA content CLOSEDATA . dataCell
    (9) dataCell -> . OPENDATA content CLOSEDATA dataCell
    (10) dataCell -> . OPENDATA content handlehref content CLOSEDATA dataCell
    (11) dataCell -> . OPENDATA handlehref content CLOSEDATA dataCell
    (12) dataCell -> .

    OPENDATA        shift and go to state 17
    CLOSEROW        reduce using rule 12 (dataCell -> .)

    dataCell                       shift and go to state 41

state 34

    (10) dataCell -> OPENDATA content handlehref . content CLOSEDATA dataCell
    (20) content -> . CONTENT content
    (21) content -> . empty
    (19) empty -> .

    CONTENT         shift and go to state 25
    CLOSEDATA       reduce using rule 19 (empty -> .)

    content                        shift and go to state 42
    empty                          shift and go to state 20

state 35

    (11) dataCell -> OPENDATA handlehref content . CLOSEDATA dataCell

    CLOSEDATA       shift and go to state 43


state 36

    (13) handlehref -> OPENHREF content . CLOSEHREF handlehref

    CLOSEHREF       shift and go to state 44


state 37

    (16) handleheader -> OPENHEADER CONTENT CONTENT CONTENT . CLOSEHEADER handleheader
    (20) content -> CONTENT . content
    (20) content -> . CONTENT content
    (21) content -> . empty
    (19) empty -> .

  ! shift/reduce conflict for CLOSEHEADER resolved as shift
    CLOSEHEADER     shift and go to state 45
    CONTENT         shift and go to state 25
    OPENHREF        reduce using rule 19 (empty -> .)

  ! CLOSEHEADER     [ reduce using rule 19 (empty -> .) ]

    content                        shift and go to state 29
    empty                          shift and go to state 20

state 38

    (15) handleheader -> OPENHEADER CONTENT CLOSEHEADER handleheader .

    CLOSEROW        reduce using rule 15 (handleheader -> OPENHEADER CONTENT CLOSEHEADER handleheader .)
    OPENDATA        reduce using rule 15 (handleheader -> OPENHEADER CONTENT CLOSEHEADER handleheader .)


state 39

    (17) handleheader -> OPENHEADER content handlehref CLOSEHEADER . handleheader
    (15) handleheader -> . OPENHEADER CONTENT CLOSEHEADER handleheader
    (16) handleheader -> . OPENHEADER CONTENT CONTENT CONTENT CLOSEHEADER handleheader
    (17) handleheader -> . OPENHEADER content handlehref CLOSEHEADER handleheader
    (18) handleheader -> . empty
    (19) empty -> .

    OPENHEADER      shift and go to state 12
    CLOSEROW        reduce using rule 19 (empty -> .)
    OPENDATA        reduce using rule 19 (empty -> .)

    handleheader                   shift and go to state 46
    empty                          shift and go to state 13

state 40

    (2) table -> BEGINTABLE skiptag handlerow handlerow handlerow handlerow handlerow handlerow . handlerow
    (6) handlerow -> . OPENROW handleheader dataCell CLOSEROW handlerow
    (7) handlerow -> . OPENROW handleheader CLOSEROW
    (8) handlerow -> .

    OPENROW         shift and go to state 8
    $end            reduce using rule 8 (handlerow -> .)

    handlerow                      shift and go to state 47

state 41

    (9) dataCell -> OPENDATA content CLOSEDATA dataCell .

    CLOSEROW        reduce using rule 9 (dataCell -> OPENDATA content CLOSEDATA dataCell .)


state 42

    (10) dataCell -> OPENDATA content handlehref content . CLOSEDATA dataCell

    CLOSEDATA       shift and go to state 48


state 43

    (11) dataCell -> OPENDATA handlehref content CLOSEDATA . dataCell
    (9) dataCell -> . OPENDATA content CLOSEDATA dataCell
    (10) dataCell -> . OPENDATA content handlehref content CLOSEDATA dataCell
    (11) dataCell -> . OPENDATA handlehref content CLOSEDATA dataCell
    (12) dataCell -> .

    OPENDATA        shift and go to state 17
    CLOSEROW        reduce using rule 12 (dataCell -> .)

    dataCell                       shift and go to state 49

state 44

    (13) handlehref -> OPENHREF content CLOSEHREF . handlehref
    (13) handlehref -> . OPENHREF content CLOSEHREF handlehref
    (14) handlehref -> .

    OPENHREF        shift and go to state 26
    CONTENT         reduce using rule 14 (handlehref -> .)
    CLOSEDATA       reduce using rule 14 (handlehref -> .)
    CLOSEHEADER     reduce using rule 14 (handlehref -> .)

    handlehref                     shift and go to state 50

state 45

    (16) handleheader -> OPENHEADER CONTENT CONTENT CONTENT CLOSEHEADER . handleheader
    (15) handleheader -> . OPENHEADER CONTENT CLOSEHEADER handleheader
    (16) handleheader -> . OPENHEADER CONTENT CONTENT CONTENT CLOSEHEADER handleheader
    (17) handleheader -> . OPENHEADER content handlehref CLOSEHEADER handleheader
    (18) handleheader -> . empty
    (19) empty -> .

    OPENHEADER      shift and go to state 12
    CLOSEROW        reduce using rule 19 (empty -> .)
    OPENDATA        reduce using rule 19 (empty -> .)

    handleheader                   shift and go to state 51
    empty                          shift and go to state 13

state 46

    (17) handleheader -> OPENHEADER content handlehref CLOSEHEADER handleheader .

    CLOSEROW        reduce using rule 17 (handleheader -> OPENHEADER content handlehref CLOSEHEADER handleheader .)
    OPENDATA        reduce using rule 17 (handleheader -> OPENHEADER content handlehref CLOSEHEADER handleheader .)


state 47

    (2) table -> BEGINTABLE skiptag handlerow handlerow handlerow handlerow handlerow handlerow handlerow .

    $end            reduce using rule 2 (table -> BEGINTABLE skiptag handlerow handlerow handlerow handlerow handlerow handlerow handlerow .)


state 48

    (10) dataCell -> OPENDATA content handlehref content CLOSEDATA . dataCell
    (9) dataCell -> . OPENDATA content CLOSEDATA dataCell
    (10) dataCell -> . OPENDATA content handlehref content CLOSEDATA dataCell
    (11) dataCell -> . OPENDATA handlehref content CLOSEDATA dataCell
    (12) dataCell -> .

    OPENDATA        shift and go to state 17
    CLOSEROW        reduce using rule 12 (dataCell -> .)

    dataCell                       shift and go to state 52

state 49

    (11) dataCell -> OPENDATA handlehref content CLOSEDATA dataCell .

    CLOSEROW        reduce using rule 11 (dataCell -> OPENDATA handlehref content CLOSEDATA dataCell .)


state 50

    (13) handlehref -> OPENHREF content CLOSEHREF handlehref .

    CONTENT         reduce using rule 13 (handlehref -> OPENHREF content CLOSEHREF handlehref .)
    CLOSEDATA       reduce using rule 13 (handlehref -> OPENHREF content CLOSEHREF handlehref .)
    CLOSEHEADER     reduce using rule 13 (handlehref -> OPENHREF content CLOSEHREF handlehref .)


state 51

    (16) handleheader -> OPENHEADER CONTENT CONTENT CONTENT CLOSEHEADER handleheader .

    CLOSEROW        reduce using rule 16 (handleheader -> OPENHEADER CONTENT CONTENT CONTENT CLOSEHEADER handleheader .)
    OPENDATA        reduce using rule 16 (handleheader -> OPENHEADER CONTENT CONTENT CONTENT CLOSEHEADER handleheader .)


state 52

    (10) dataCell -> OPENDATA content handlehref content CLOSEDATA dataCell .

    CLOSEROW        reduce using rule 10 (dataCell -> OPENDATA content handlehref content CLOSEDATA dataCell .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for OPENROW in state 4 resolved as shift
WARNING: shift/reduce conflict for OPENROW in state 7 resolved as shift
WARNING: shift/reduce conflict for OPENROW in state 10 resolved as shift
WARNING: shift/reduce conflict for CLOSEROW in state 11 resolved as shift
WARNING: shift/reduce conflict for OPENROW in state 14 resolved as shift
WARNING: shift/reduce conflict for CONTENT in state 17 resolved as shift
WARNING: shift/reduce conflict for OPENHREF in state 17 resolved as shift
WARNING: shift/reduce conflict for CONTENT in state 17 resolved as shift
WARNING: shift/reduce conflict for CLOSEHEADER in state 18 resolved as shift
WARNING: shift/reduce conflict for OPENROW in state 21 resolved as shift
WARNING: shift/reduce conflict for OPENROW in state 22 resolved as shift
WARNING: shift/reduce conflict for CLOSEDATA in state 23 resolved as shift
WARNING: shift/reduce conflict for CONTENT in state 25 resolved as shift
WARNING: shift/reduce conflict for OPENROW in state 31 resolved as shift
WARNING: shift/reduce conflict for CLOSEHEADER in state 37 resolved as shift
WARNING: reduce/reduce conflict in state 17 resolved using rule (handlehref -> <empty>)
WARNING: rejected rule (empty -> <empty>) in state 17
